# email-automation-agent

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  FEATURE_MAP.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_automation_run_state_and_pending_delays.py  003_subscriber_status_and_consent.py  004_event_bus_and_webhooks.py  005_activity_log_and_alerts.py  006_tracking_and_subscriber_activity.py  007_segments.py  008_booking_domain.py  009_booking_profile.py  010_event_type_extended.py  011_vacation_blocks_and_calendar_connections.py  012_booking_flow_and_questions.py  013_booking_notifications_and_reminders.py  014_booking_state_payment_cancel.py  015_audit_cancel_token_webhook_embed.py  016_subscriber_custom_fields_groups_tags_suppression.py  017_campaign_plain_scheduled_ab.py  018_forms.py  019_automation_versions.py  020_subscriber_phone_campaign_channel_automation_versions.py  020_whatsapp_subscriber_phone_campaign_channel.py  021_automation_trigger_config.py  022_subscriber_field_definitions.py  023_campaign_recipients_campaign_id_index.py
app/: config.py  main.py
app/middleware/: rate_limit.py
app/models/: form.py  (+15 more)
docs/: ADVANCED_FEATURES_SPEC.md  AUTOMATIONS_SPEC.md  AVAILABILITY_ENGINE_SPEC.md  BOOKING_NOTIFICATIONS_SPEC.md  BOOKING_WEBHOOKS.md  CAMPAIGNS_SPEC.md  EMAIL_INFRASTRUCTURE_SPEC.md  EVENT_TYPES_SPEC.md  FORMS_SPEC.md  SUBSCRIBERS_SPEC.md  USER_TEAM_SPEC.md
frontend/: package-lock.json  package.json
scripts/: delete_all_campaigns.py
(+114 files in other folders)
