[project]
name = "email-auto-agent"
version = "0.1.0"
description = "Email automation agent with Resend, FastAPI and Next.js (MailerLite-style MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "resend>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.40.0",
]
